# Rust_Lab4

./: Cargo.toml
src/: index.html  main.rs  ws_handler.rs
src/controllers/: auth_controller.rs
src/db/: DB.rs
src/entity/: Chat.rs  Message.rs  User.rs  chat_user.rs  mod.rs
src/frontend/: home.html  login.html
src/utils/: MessagingUtil.rs  SocketUtil.rs  UserUtil.rs  mod.rs
