[package]
name = "Lab4"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
sea-orm = { version = "1.1.0", features = [ 'sqlx-postgres', 'runtime-tokio-rustls', "macros" ] }
dotenvy = "0.15"
chrono = "0.4.38"
tokio-tungstenite = "0.21.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133" # For loading environment variables from .env file
actix-web = "4.0"                  # HTTP framework
actix-rt = "2.5"                   # To run the server
jsonwebtoken = "8.1"               # For JWT handling
futures = "0.3"
actix-web-actors = "4.0"            # For WebSocket support
bcrypt = "0.15.1"
